# telemetry-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  GITHUB_METADATA.md  LICENSE-APACHE  Makefile  README.md  ROADMAP.md  SECURITY.md  SLSA.md  benchmark_results.txt  clippy.toml  deny.toml  rustfmt.toml  security_audit.txt  security_deny_audit.txt
.cargo/: config.toml
.github/: ci.yml  dependabot.yml
.github/workflows/: ci.yml  docs.yml
benches/: telemetry_benchmarks.rs
docs/: DEVELOPMENT_ROADMAP.md  EVENT_SCHEMA.md  EXECUTIVE_SUMMARY.md  JS_TS_ECOSYSTEM_ANALYSIS.md  MULTI_LANGUAGE_ROADMAP.md  README.md  SESSION_SUMMARY.md  TELEMETRY_APPROACH.md  next.config.mjs  package-lock.json  package.json
docs/.source/: index.js
docs/app/: layout.config.tsx  layout.tsx  page.tsx  source.ts
docs/app/components/: GoogleAnalytics.tsx
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/components/ui/: icon.tsx
docs/content/docs/: advanced-privacy.mdx  api.mdx  auto-sync.mdx  best-practices.mdx  cli.mdx  environments.mdx  error-handling.mdx  examples.mdx  index.mdx  meta.json  privacy-compliance.mdx  privacy.mdx  quick-start.mdx  self-hosting.mdx  server-api.mdx
docs/public/: CNAME  site.webmanifest
examples/: auto_sync.rs  basic.rs  e2e_sync_test.rs  instrument_macro.rs  interactive_consent.rs  local_only.rs  minimal_consent.rs  privacy.rs  sync_example.rs
npm/example/: basic.js  with-sync.js
npm/telemetry-kit-node/: README.md  index.d.ts  package.json
project-docs/: BENCHMARKS.md  CLACKS.md  CLI.md  CLI_CONSENT.md  CURRENT_STATUS.md  DOCS_SETUP.md  ERROR_MESSAGES.md  INSTRUMENT_MACRO.md  LOGO_UPDATES.md  MAKEFILE_SUMMARY.md  Makefile.md  NODE_POC_COMPLETE.md  NODE_STRATEGY.md  PHASE_1_COMPLETE.md  PHASE_2_AUTO_SYNC.md  PHASE_2_CLI.md  PRIVACY_IMPLEMENTATION.md  PRODUCTION_PLAN.md  PROPERTY_TESTS.md  README.md  SECURITY_AUDIT.md  SYNC_SETUP.md  SYNC_STRATEGY.md  TESTING_COMPLETE.md  UNMAINTAINED_DEPS.md  WEEK_5_COMPLETE.md  WEEK_7_COMPLETE.md  WEEK_8_SECURITY.md
scripts/: check-sync.sh  dev-setup.sh  test-all.sh
server/: .env.example  Cargo.toml  Dockerfile  README.md
server/migrations/: 001_init.sql
server/src/: auth.rs  clacks.rs  config.rs  handlers.rs  main.rs  redis_client.rs
server/tests/: integration_test.rs
src/: auto_sync.rs  builder.rs  error.rs  event.rs  lib.rs  privacy.rs  storage.rs  telemetry.rs  user.rs
src/bindings/: mod.rs  node.rs
src/sync/: auth.rs  client.rs  config.rs  mod.rs  retry.rs
telemetry-kit-macros/: Cargo.toml
telemetry-kit-macros/src/: lib.rs
telemetry-kit-macros/tests/: compile_tests.rs
telemetry-kit-macros/tests/ui/pass/: async_result.rs  generics.rs  sync_no_result.rs
telemetry-kit-server/: docker-compose.yml
telemetry-kit-server/src/: auth.rs  config.rs  handlers.rs  main.rs  models.rs  rate_limit.rs  redis_client.rs
tests/: privacy_integration.rs  sync_integration_test.rs
vscode-extension/: CHANGELOG.md  DEVELOPMENT.md  README.md  package.json
vscode-extension/snippets/: telemetry.json
vscode-extension/src/: extension.ts
