[package]
name = "telemetry-kit"
version = "0.0.1"
edition = "2021"
authors = ["Ibrahim Cesar <email@ibrahimcesar.com>"]
license = "MIT OR Apache-2.0"
description = "Privacy-first, batteries-included telemetry toolkit for Rust applications with OpenTelemetry"
repository = "https://github.com/ibrahimcesar/telemetry-kit"
homepage = "https://github.com/ibrahimcesar/telemetry-kit"
documentation = "https://docs.rs/telemetry-kit"
readme = "README.md"
keywords = ["telemetry", "opentelemetry", "observability", "tracing", "metrics"]
categories = ["development-tools", "development-tools::profiling", "network-programming"]
rust-version = "1.75.0"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Cryptography
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"], optional = true }

# SQLite storage
rusqlite = { version = "0.30", features = ["bundled"] }

# Error handling
thiserror = "1.0"

# System information
machine-uid = "0.5"

# Random number generation
rand = "0.8"

# Directory helpers
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[features]
default = ["sync"]
sync = ["tokio"]
cli = []
# Future features:
# auto-instrument = []
# privacy = []
# simple-server = []

[lib]
name = "telemetry_kit"
path = "src/lib.rs"

[[bin]]
name = "telemetry-kit"
path = "src/bin/cli.rs"
required-features = ["cli"]

[workspace]
members = [
    ".",
    "telemetry-kit-server",
    # Future workspace members:
    # "telemetry-kit-cli",
    # "telemetry-kit-macros",
]
