[package]
name = "telemetry-kit"
version = "0.2.0-alpha.1"
edition = "2021"
authors = ["Ibrahim Cesar <email@ibrahimcesar.com>"]
license = "MIT OR Apache-2.0"
description = "Privacy-first, batteries-included telemetry toolkit for Rust applications with OpenTelemetry"
repository = "https://github.com/ibrahimcesar/telemetry-kit"
homepage = "https://github.com/ibrahimcesar/telemetry-kit"
documentation = "https://docs.rs/telemetry-kit"
readme = "README.md"
keywords = ["telemetry", "opentelemetry", "observability", "tracing", "metrics"]
categories = ["development-tools", "development-tools::profiling", "network-programming"]
rust-version = "1.75.0"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Cryptography
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"], optional = true }

# SQLite storage
rusqlite = { version = "0.30", features = ["bundled"] }

# Error handling
thiserror = "1.0"

# System information
machine-uid = "0.5"

# Random number generation
rand = "0.8"

# Directory helpers
dirs = "5.0"

# Procedural macros
telemetry-kit-macros = { version = "0.2.0-alpha.1", path = "telemetry-kit-macros", optional = true }

# Node.js bindings (optional)
napi = { version = "2.16", features = ["async", "tokio_rt"], optional = true }
napi-derive = { version = "2.16", optional = true }

# CLI dependencies (optional)
clap = { version = "4.4", features = ["derive", "color", "suggestions"], optional = true }
dialoguer = { version = "0.11", optional = true }
indicatif = { version = "0.17", optional = true }
colored = { version = "2.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
proptest = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = ["sync", "privacy"]
sync = ["tokio"]
cli = ["clap", "dialoguer", "indicatif", "colored", "tokio"]
privacy = []
napi-bindings = ["napi", "napi-derive", "tokio"]
macros = ["telemetry-kit-macros"]
# Future features:
# simple-server = []

[lib]
name = "telemetry_kit"
path = "src/lib.rs"

[[bin]]
name = "telemetry-kit"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[bench]]
name = "telemetry_benchmarks"
harness = false

[workspace]
members = [
    ".",
    "server", "telemetry-kit-macros",
    # Future workspace members:
    # "telemetry-kit-cli",
    # "telemetry-kit-macros",
]
