[package]
name = "telemetry-kit-server"
version = "0.1.0"
edition = "2021"
authors = ["Ibrahim Cesar <email@ibrahimcesar.com>"]
license = "MIT OR Apache-2.0"
description = "Ingestion server for telemetry-kit events"
rust-version = "1.75.0"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "limit"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis for caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Cryptography (HMAC verification)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
axum-test = "14.0"
tokio-test = "0.4"

[[bin]]
name = "telemetry-kit-server"
path = "src/main.rs"
