[package]
name = "telemetry-kit-macros"
version = "0.2.0-alpha.1"
edition = "2021"
authors = ["Ibrahim Cesar <email@ibrahimcesar.com>"]
license = "MIT OR Apache-2.0"
description = "Procedural macros for telemetry-kit"
repository = "https://github.com/ibrahimcesar/telemetry-kit"
documentation = "https://docs.rs/telemetry-kit-macros"
keywords = ["telemetry", "macros", "instrumentation", "observability"]
categories = ["development-tools", "development-tools::profiling"]
rust-version = "1.75.0"

[lib]
proc-macro = true

[dependencies]
# Procedural macro dependencies
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
# For testing macros
trybuild = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
